--- a/predictor/templates/predictor/register.html
+++ b/predictor/templates/predictor/register.html
@@ -7,7 +7,7 @@
 <div class="login container h-100">
   <div class="row h-100 ">
     <div class="col-12 col-sm d-flex justify-content-center align-items-center">
-      <div class="login-container w-50 h-100 d-flex flex-column justify-content-center align-items-center">
+      <div class="login-container  h-100 d-flex flex-column justify-content-center align-items-center">
       <img class="my-logo w-25 shadow" src="{% static 'images/logo.png' %}" alt="">
       <p class="m-0 mt-3">Register</p>
       <form action="{% url 'register' %}" method="post" class="login-form form-group w-75">
