--- a/predictor/templates/predictor/home.html
+++ b/predictor/templates/predictor/home.html
@@ -13,7 +13,7 @@
 {% block content %}
 
 <div class="container d-flex flex-column justify-content-center align-items-center m-3 p-3 ">
-<div class="message bg-light position-absolute  w-75 p-3 rounded"> 
+<div class="message bg-light position-absolute  w-75 p-3 rounded mb-3"> 
 {% if messages %}
 {% for message in messages %}
 {{message}}
